monitoring: Fix custom variables alignment

--- a/modules/monitoring/public/css/tables.less
+++ b/modules/monitoring/public/css/tables.less
@@ -21,11 +21,6 @@
 .custom-variables > ul {
   list-style-type: none;
   margin: 0;
-  padding: 0 0 0 @vertical-padding;
-
-  &:first-child {
-    padding: 0;
-  }
 }
 
 // Host name and IP addresses in the host and service detail view
